# chaoscypher

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .vulture_whitelist.py  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  server.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  gitleaks.yml  publish-ghcr.yml  publish-pypi.yml
e2e/: README.md  conftest.py
e2e/api/: _fake_ollama_helpers.py  conftest.py  test_auth.py  test_backup.py  test_cascades.py  test_chat.py  test_chat_advanced.py  test_databases.py  test_edges.py  test_export_import.py  test_extraction_control.py  test_fresh_setup.py  test_graph_ops.py  test_grounding.py  test_journeys.py  test_lexicon.py  test_llm_management.py  test_loader_matrix.py  test_logs.py  test_negative_paths.py  test_node_extras.py  test_nodes.py  test_pagination_filtering.py  test_quality.py  test_queue.py  test_race_conditions.py  test_real_llm_smoke.py  test_resume.py  test_search.py  test_search_advanced.py  test_settings.py  test_settings_advanced.py  test_settings_reset.py  test_source_data.py  test_source_extraction.py  test_source_url.py  test_sources.py  test_template_batch.py  test_templates.py  test_tools.py  (+4 more)
e2e/browser/: conftest.py  test_export.py  test_import_graph.py  test_mobile_layout.py  test_search.py  test_setup_login.py  test_upload_source.py
e2e/cli/: conftest.py  test_basic_commands.py  test_ccx_roundtrip.py  test_config_commands.py  test_database_lifecycle.py  test_diagnostics_command.py  test_graph_crud.py  test_source_delete_get.py  test_source_pipeline.py  test_template_crud.py
e2e/fixtures/: generate_loader_samples.py  generate_seed.py  seed.ccx
e2e/fixtures/sample_data/: sample.csv  sample.docx  sample.epub  sample.html  sample.json  sample.jsonl  sample.md  sample.pptx  sample.txt  sample.xlsx  war_and_peace.txt  war_and_peace_small.txt
e2e/fixtures/snapshots/: credentials.json  post-setup-app.db  refresh.py
e2e/migrations/: conftest.py  test_migration_roundtrip.py
scripts/: check_no_internal_refs.py  check_png_signature.py  check_release_version.py  check_spdx_headers.py  e2e_report_summary.py  generate-types.sh  generate_model_cards.py  license_check_interface.py  license_check_python.py  lint_claude_rules.py  mutmut_score.py  run_ci.py
tools/license_check/: policy.toml
tools/semgrep/rules/: cc-001-factory-naming.yml  cc-003-list-without-load-only.yml  cc-005-manual-session.yml  cc-006-hyphen-in-api-path.yml  cc-007-session-exec-in-service.yml  cc-008-defer-in-repository.yml  cc-009-sqlmodel-import-in-service.yml  cc-015-bare-type-ignore.yml  cc-019-inline-uuid4.yml  cc-022-fstring-in-logger.yml  cc-023-logger-bind.yml  cc-026-raw-sql-in-service.yml  cc-027-action-verb-in-route.yml  cc-028-id-in-query-string.yml  cc-029-skip-offset-pagination.yml  cc-031-httpexception-in-service-or-core.yml  cc-033-sync-route-handler.yml  cc-036-internal-settings-import.yml  cc-038-checkconstraint-in-models.yml  cc-040-memory-sqlite-in-tests.yml  cc-041-asyncio-run-in-tests.yml  cc-045-bare-stdlib-raise-in-core.yml  cc-046-hardcoded-sleep-duration.yml  cc-047-hardcoded-timeout-kwarg.yml  cc-048-pydantic-maxlength-literal.yml  cc-049-no-legacy-extraction-chunks-fields.yml  cc-050-no-legacy-vision-columns.yml
tools/semgrep/tests/: README.md  cc-001-factory-naming.py  cc-003-list-without-load-only.py  cc-005-manual-session.py  cc-006-hyphen-in-api-path.py  cc-007-session-exec-in-service.py  cc-008-defer-in-repository.py  cc-009-sqlmodel-import-in-service.py  cc-015-bare-type-ignore.py  cc-019-inline-uuid4.py  cc-022-fstring-in-logger.py  cc-023-logger-bind.py  cc-026-raw-sql-in-service.py  cc-027-action-verb-in-route.py  cc-028-id-in-query-string.py  cc-029-skip-offset-pagination.py  cc-031-httpexception-in-service-or-core.py  cc-033-sync-route-handler.py  cc-036-internal-settings-import.py  cc-038-checkconstraint-in-models.py  cc-040-memory-sqlite-in-tests.py  cc-041-asyncio-run-in-tests.py  cc-045-bare-stdlib-raise-in-core.py  cc-046-hardcoded-sleep-duration.py  cc-047-hardcoded-timeout-kwarg.py  cc-048-pydantic-maxlength-literal.py  cc-049-no-legacy-extraction-chunks-fields.py  cc-050-no-legacy-vision-columns.py
